# hackathon-ipssi-mia-web

./: LICENSE  README.md  docker-compose.yml  package-lock.json
ai/: models.md
ai/dataset/: tweets_dataset.csv
ai/models/: best_emotion_model.pth  models.md
ai/notebook/: CNN Emotion.ipynb  hackatton.ipynb  recommandation.ipynb  training_CNN.ipynb  tweets_dataset_preprocessed.csv
backend/: .env  .gitignore  Dockerfile  app.js  frontend.js  index.js  package-lock.json  package.json
backend/controllers/: commentController.js  hashtagController.js  interactionController.js  likeController.js  notificationController.js  postController.js  scoreThemeController.js  themeController.js  trendingController.js  userController.js
backend/middleware/: api.js  auth.js  upload.js  verifyAccess.js  zodValidator.js
backend/models/: Bookmark.js  Comment.js  Hashtag.js  Interaction.js  Like.js  Notification.js  Post.js  ScoreTheme.js  Share.js  Theme.js  User.js
backend/routes/: commentRoutes.js  hashtagRoutes.js  interactionRoutes.js  likeRoutes.js  notificationRoutes.js  postRoutes.js  scoreThemeRoutes.js  themeRoutes.js  trendingRoutes.js  uploadRoutes.js  (+1 more)
backend_fer/: pyproject.toml
fer/: Dockerfile  README.md  pyproject.toml
fer/src/fer/controllers/: main_controller.py
frontend/: .prettierrc  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.js  vite.config.ts
nlp/: .gitignore  Dockerfile  pyproject.toml
nlp/src/nlp/: app.py
nlp/src/nlp/controllers/: preprocessing.py
nlp/src/nlp/middleware/: apikey.py
(+93 files in other folders)
