[project]
name = "nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "locinone",email = "locinone@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "gensim (>=4.3.3,<5.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
]

[tool.poetry]
packages = [{include = "nlp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
